ch7/7.1.2/7.2.1/7.1.1/cilium/networkpolicy/2.allow-icmp-can-ping-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-icmp-can-ping-policy"
spec:
  endpointSelector: {} 
  egress:
    - toEndpoints:
        - matchLabels:
            icmp: allow
      icmps:
        - fields:
          - type: 8 
            family: IPv4
  ingress:
    - fromEndpoints:
        - matchLabels:
            icmp: allow
      icmps:
        - fields:
          - type: 8 
            family: IPv4
  enableDefaultDeny:
    egress: true 
    ingress: true
